Fix main plot element positioning
flexbox positioning of svg plot was creating window resizing/responsiveness issues and misalignment of the tooltip

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    align-items: flex-start;
     margin-top: 10px;
 }
 
